swagger, date in post and comments and filter post
